--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="row gx-2 gy-3 m-1">
         <div class="col-xs-12 col-sm-6 col-md-4 ">
           <div class="card">
-            <img src="/assets/img/homepage-seen-on-computer-screen 1 (1).jpg" class="card-img-top" alt="...">
+            <img src="assets/img/1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -62,7 +62,7 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="card">
-            <img src="/assets/img/homepage-seen-on-computer-screen 1 (1).jpg" class="card-img-top" alt="...">
+            <img src="assets/img/1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -81,7 +81,7 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="card">
-            <img src="/assets/img/homepage-seen-on-computer-screen 1 (1).jpg" class="card-img-top" alt="...">
+            <img src="assets/img/1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -100,7 +100,7 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 ">
           <div class="card">
-            <img src="/assets/img/homepage-seen-on-computer-screen 1 (1).jpg" class="card-img-top" alt="...">
+            <img src="assets/img/1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -119,7 +119,7 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="card">
-            <img src="/assets/img/homepage-seen-on-computer-screen 1 (1).jpg" class="card-img-top" alt="...">
+            <img src="assets/img/1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -138,7 +138,7 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="card">
-            <img src="/assets/img/homepage-seen-on-computer-screen 1 (1).jpg" class="card-img-top" alt="...">
+            <img src="assets/img/1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
